[package]
name = 'multicast-socket'
description = 'Single-socket multi-interface multicast socket'
version = "0.5.3"
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2021'
homepage = 'https://github.com/bltavares/multicast-socket'
repository = 'https://github.com/bltavares/multicast-socket'
readme = 'README.md'
license = 'MIT OR Apache-2.0'
keywords = ['multicast']

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
network-interface = "1.1"
tokio = { optional = true, version = "1.28", features = [
    "net",
    "rt",
    "macros",
    "time",
] }

[dependencies.socket2]
version = '0.5'
features = ['all']

[target.'cfg(windows)'.dependencies.winapi]
version = '0.3.9'
features = ['mswsock', 'iphlpapi']

[target.'cfg(not(windows))'.dependencies.nix]
version = '0.24.1'
features = ['net', 'uio', 'socket']

[target.'cfg(not(windows))'.dependencies.libc]
version = '0.2.85'

[[example]]
name = "tokio_mdns"
required-features = ["tokio"]
